--- a/kubernetes/flux/repositories/helm/kustomization.yaml
+++ b/kubernetes/flux/repositories/helm/kustomization.yaml
@@ -7,7 +7,6 @@ resources:
   - ./cilium.yaml
   - ./cloudnative-pg.yaml
   - ./coredns.yaml
-  - ./datree.yaml
   - ./external-dns.yaml
   - ./fairwinds.yaml
   - ./grafana.yaml
@@ -15,6 +14,7 @@ resources:
   - ./jetstack.yaml
   - ./k8s-gateway.yaml
   - ./kubernetes-dashboard.yaml
+  - ./kyverno.yaml
   - ./metrics-server.yaml
   - ./openebs.yaml
   - ./postfinance.yaml
