--- a/kubernetes/apps/observability/goldilocks/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/goldilocks/app/helmrelease.yaml
@@ -56,7 +56,7 @@ spec:
           - host: &host ${GATUS_SUBDOMAIN:-${APP}}.${SECRET_DOMAIN}
             paths:
               - path: /
-                type: ImplementationSpecific
+                type: Prefix
         tls:
           - hosts:
               - *host
