Add Kyverno reporter charts

--- a/kubernetes/flux/repositories/helm/kustomization.yaml
+++ b/kubernetes/flux/repositories/helm/kustomization.yaml
@@ -15,6 +15,7 @@ resources:
   - ./k8s-gateway.yaml
   - ./kubernetes-dashboard.yaml
   - ./kyverno.yaml
+  - ./kyverno-reporter.yaml
   - ./metrics-server.yaml
   - ./openebs.yaml
   - ./postfinance.yaml
