--- a/kubernetes/apps/kyverno/kyverno/policies/deny-ingress-implementationspecific.yaml
+++ b/kubernetes/apps/kyverno/kyverno/policies/deny-ingress-implementationspecific.yaml
@@ -8,7 +8,7 @@ kind: ClusterPolicy
 metadata:
   name: deny-ingress-implentationspecific
   annotations:
-    policies.kyverno.io/category: Other
+    policies.kyverno.io/category: Best Practices
     policies.kyverno.io/subject: Ingress
     policies.kyverno.io/minversion: 1.4.3
     policies.kyverno.io/description: >-
