--- a/docker/ansible/templates/compose-modules/portainer.yml
+++ b/docker/ansible/templates/compose-modules/portainer.yml
@@ -1,7 +1,15 @@
+#
+#### DEPRECATION NOTICE
+## This compose module is no longer in use
+## Replaced by: using the CLI
+## Last used version: 2.23.0-alpine@sha256:97342cf8a821d64d59880bdede8f45ea9c869fea702dd56128a67d552dc632ab
+##      Docker Proxy: version-1.26.2-r0@sha256:d6d936c98bd7ab4f643ace8c548293d6cd511f0692471e1e9bfb5e144e63627a
+#
+
 services:
   portainer:
     container_name: portainer
-    image: portainer/portainer-ce:2.23.0-alpine@sha256:97342cf8a821d64d59880bdede8f45ea9c869fea702dd56128a67d552dc632ab
+    image: portainer/portainer-ce
     depends_on:
       - portainer-docker-proxy
       - traefik
@@ -34,7 +42,7 @@ services:
       - "traefik.http.services.portainer-svc.loadbalancer.server.port=9000"
 
   portainer-docker-proxy:
-    image: lscr.io/linuxserver/socket-proxy:version-1.26.2-r0@sha256:d6d936c98bd7ab4f643ace8c548293d6cd511f0692471e1e9bfb5e144e63627a
+    image: lscr.io/linuxserver/socket-proxy
     container_name: portainer-docker-proxy
     restart: always
     networks:
