--- a/docker/ansible/templates/data/common/gatus/config.yaml
+++ b/docker/ansible/templates/data/common/gatus/config.yaml
@@ -141,9 +141,9 @@ endpoints:
     <<: *defaults
     url: "https://docs.${DOMAINNAME}"
 
-  - name: Paperless - HTTP
-    <<: *defaults
-    url: "https://paperless.${DOMAINNAME}"
+  # - name: Paperless - HTTP
+  #   <<: *defaults
+  #   url: "https://paperless.${DOMAINNAME}"
 
   - name: Papermerge - HTTP
     <<: *defaults
