Phase out Wallabag

--- a/docker/ansible/templates/data/common/gatus/config.yaml
+++ b/docker/ansible/templates/data/common/gatus/config.yaml
@@ -205,9 +205,9 @@ endpoints:
   #   <<: *defaults
   #   url: "https://vikunja.${DOMAINNAME}"
 
-  - name: Wallabag - HTTP
-    <<: *defaults
-    url: "https://wallabag.${DOMAINNAME}"
+  # - name: Wallabag - HTTP
+  #   <<: *defaults
+  #   url: "https://wallabag.${DOMAINNAME}"
 
   # - name: Wireguard - HTTP
   #   <<: *defaults
