--- a/docker/ansible/templates/compose-modules/wallabag.yml
+++ b/docker/ansible/templates/compose-modules/wallabag.yml
@@ -1,8 +1,18 @@
+#
+#### DEPRECATION NOTICE
+## This compose module is no longer in use
+## Replaced by: <none>
+## Last used version: 2.6.10@sha256:8854765d299d8e93f962d4be02ceb5703ed2ee24ec6c884f870bb7a18de41378
+##                DB: 11.6.2@sha256:0a620383fe05d20b3cc7510ebccc6749f83f1b0f97f3030d10dd2fa199371f07
+##         Backup DB: 4.1.9@sha256:0b2d0dee38fbe5dbffd63df59afc2b812d36f31ff1213a0f45f7e8901ac9de87
+##             Redis: alpine3.19@sha256:892b41c092a599f76c30b48e9dcfb185ce8cea3560970b1c4f2745c89bb34344
+#
+
 services:
   # NOTE: Requires the following command on fresh install:
   # docker exec -t wallabag /var/www/wallabag/bin/console wallabag:install --env=prod --no-interaction
   wallabag:
-    image: wallabag/wallabag:2.6.10@sha256:8854765d299d8e93f962d4be02ceb5703ed2ee24ec6c884f870bb7a18de41378
+    image: wallabag/wallabag
     container_name: wallabag
     depends_on:
       - traefik
@@ -63,7 +73,7 @@ services:
       - "traefik.http.services.wallabag.loadbalancer.server.port=80"
 
   wallabag-db:
-    image: mariadb:11.6.2@sha256:0a620383fe05d20b3cc7510ebccc6749f83f1b0f97f3030d10dd2fa199371f07
+    image: mariadb
     container_name: wallabag-db
     command: --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci --transaction-isolation=READ-COMMITTED --log-bin=binlog --binlog-format=ROW
     restart: always
@@ -99,7 +109,7 @@ services:
 
   wallabag-db-backup:
     container_name: wallabag-db-backup
-    image: tiredofit/db-backup:4.1.9@sha256:0b2d0dee38fbe5dbffd63df59afc2b812d36f31ff1213a0f45f7e8901ac9de87
+    image: tiredofit/db-backup
     depends_on:
       - wallabag-db
     volumes:
@@ -141,7 +151,7 @@ services:
       - no-new-privileges=true
 
   wallabag-redis:
-    image: redis:alpine3.19@sha256:892b41c092a599f76c30b48e9dcfb185ce8cea3560970b1c4f2745c89bb34344
+    image: redis
     container_name: wallabag-redis
     # Requirepass is needed as environment variable isn't picked up
     command: >
