--- a/docker/ansible/templates/compose-modules/homepage.yml
+++ b/docker/ansible/templates/compose-modules/homepage.yml
@@ -25,9 +25,9 @@ services:
       # Traefik
       - "traefik.enable=true"
       ## Middlewares
-      - "traefik.http.routers.homepage-rtr.middlewares=chain-auth@file"
+      - "traefik.http.routers.homepage-rtr.middlewares=chain-no-auth@file"
       ## HTTP Services
-      - "traefik.http.routers.homepage-rtr.rule=Host(`homepage-$GENERIC_HOSTNAME_SUFFIX.$DOMAINNAME`)"
+      - "traefik.http.routers.homepage-rtr.rule=Host(`apps-$GENERIC_HOSTNAME_SUFFIX.$DOMAINNAME`)"
       - "traefik.http.routers.homepage-rtr.service=homepage"
       - "traefik.http.services.homepage.loadbalancer.server.port=3000"
 
