--- a/docker/ansible/templates/compose-modules/linkding.yml
+++ b/docker/ansible/templates/compose-modules/linkding.yml
@@ -1,6 +1,15 @@
+#
+#### DEPRECATION NOTICE
+## This compose module is no longer in use
+## Replaced by: None
+## Last used version: 1.36.0-alpine@sha256:137dd201797c186419c92c32f0c42c61bdb85f60653932c96985a0e6995a4286
+##                DB: 16.6-alpine@sha256:52bba373df3c13594014b5e9ccc9f3c2cdb2221d50db1a91ec64570819f18aba
+##         DB Backup: 4.1.9@sha256:0b2d0dee38fbe5dbffd63df59afc2b812d36f31ff1213a0f45f7e8901ac9de87
+#
+
 services:
   linkding:
-    image: sissbruecker/linkding:1.36.0-alpine@sha256:137dd201797c186419c92c32f0c42c61bdb85f60653932c96985a0e6995a4286
+    image: sissbruecker/linkding
     container_name: linkding
     depends_on:
       - traefik
@@ -49,7 +58,7 @@ services:
       - "traefik.http.services.linkding.loadbalancer.server.port=9090"
 
   linkding-db:
-    image: docker.io/library/postgres:16.6-alpine@sha256:52bba373df3c13594014b5e9ccc9f3c2cdb2221d50db1a91ec64570819f18aba
+    image: docker.io/library/postgres
     container_name: linkding-db
     restart: always
     security_opt:
@@ -74,7 +83,7 @@ services:
 
   linkding-db-backup:
     container_name: linkding-db-backup
-    image: tiredofit/db-backup:4.1.9@sha256:0b2d0dee38fbe5dbffd63df59afc2b812d36f31ff1213a0f45f7e8901ac9de87
+    image: tiredofit/db-backup
     depends_on:
       - linkding-db
     volumes:
