Retire change detection

--- a/docker/ansible/templates/data/common/gatus/config.yaml
+++ b/docker/ansible/templates/data/common/gatus/config.yaml
@@ -69,9 +69,9 @@ endpoints:
   #   <<: *defaults
   #   url: "https://bitwarden.${DOMAINNAME}"
 
-  - name: Change-Detection - HTTP
-    <<: *defaults
-    url: "https://change-detection.${DOMAINNAME}"
+  # - name: Change-Detection - HTTP
+  #   <<: *defaults
+  #   url: "https://change-detection.${DOMAINNAME}"
 
   - name: Cloud - HTTP
     <<: *defaults
