--- a/docker/ansible/templates/compose-modules/change-detection.yml
+++ b/docker/ansible/templates/compose-modules/change-detection.yml
@@ -1,6 +1,13 @@
+#
+#### DEPRECATION NOTICE
+## This compose module is no longer in use
+## Replaced by: None
+## Last used version: 0.47.06@sha256:6e9dcf4abc1cfb0b1eeba6b6ff52a4b6f790110d6cdc8b7942c6cecf34e56265
+#
+
 services:
   change-detection:
-    image: ghcr.io/dgtlmoon/changedetection.io:0.47.06@sha256:6e9dcf4abc1cfb0b1eeba6b6ff52a4b6f790110d6cdc8b7942c6cecf34e56265
+    image: ghcr.io/dgtlmoon/changedetection.io
     container_name: change-detection
     depends_on:
       - traefik
