Gather frontend networks during Ansible playbook

--- a/docker/ansible/playbooks/update-docker.yaml
+++ b/docker/ansible/playbooks/update-docker.yaml
@@ -17,6 +17,7 @@
       when: inventory_hostname in groups['external']
 
     - include_tasks: ../tasks/configure-ufw.yaml
+    - include_tasks: ../tasks/gather-frontend-networks.yaml
     - include_tasks: ../tasks/load-credentials.yaml
 
     - name: Dynamically create compose file
