--- a/docker/ansible/templates/compose-modules/adguard.yml
+++ b/docker/ansible/templates/compose-modules/adguard.yml
@@ -24,8 +24,7 @@ services:
       - unbound
     mem_limit: 1024m
     networks:
-      t2_proxy:
-        ipv4_address: 192.168.101.220
+      adguard-frontend:
       adguard-backend:
     ports:
       - '53:53/tcp'
@@ -50,6 +49,7 @@ services:
       - homepage.description=DNS Service
       # Traefik
       - "traefik.enable=true"
+      - "traefik.docker.network=adguard-frontend"
       ## Middlewares
       - "traefik.http.routers.adguard-rtr.middlewares=chain-auth@file"
       ## HTTP Services
@@ -59,6 +59,8 @@ services:
       - "traefik.http.services.adguard.loadbalancer.server.port=80"
 
 networks:
+  adguard-frontend:
+    name: adguard-frontend
   adguard-backend:
     name: adguard-backend
 
