--- a/docker/ansible/templates/compose-modules/authelia.yml
+++ b/docker/ansible/templates/compose-modules/authelia.yml
@@ -12,8 +12,7 @@ services:
     depends_on:
       - traefik
     networks:
-      t2_proxy:
-        ipv4_address: 192.168.101.202
+      authelia-frontend:
     restart: always
     security_opt:
       - no-new-privileges=true
@@ -32,6 +31,7 @@ services:
       - homepage.description=Authentication Service
       # Traefik
       - "traefik.enable=true"
+      - "traefik.docker.network=authelia-frontend"
       ## Middlewares
       ## Using no-auth chain to use the Authelia service
       - "traefik.http.routers.authelia-rtr.middlewares=chain-no-auth@file"
@@ -74,3 +74,6 @@ services:
 
 volumes:
   authelia_data:
+
+networks:
+  authelia-frontend:
