--- a/docker/ansible/templates/compose-modules/cyberchef.yml
+++ b/docker/ansible/templates/compose-modules/cyberchef.yml
@@ -5,7 +5,7 @@ services:
     depends_on:
       - traefik
     networks:
-      - t2_proxy
+      - cyberchef-frontend
     restart: always
     security_opt:
       - no-new-privileges=true
@@ -21,8 +21,13 @@ services:
       - homepage.description=Various IT Tools
       # Traefik
       - "traefik.enable=true"
+      - "traefik.docker.network=cyberchef-frontend"
       ## Middlewares
       - "traefik.http.routers.cyberchef-rtr.middlewares=chain-auth@file"
       ## HTTP Services
       - "traefik.http.routers.cyberchef-rtr.service=cyberchef-svc"
       - "traefik.http.services.cyberchef-svc.loadbalancer.server.port=80"
+
+networks:
+  cyberchef-frontend:
+    name: cyberchef-frontend
