--- a/docker/ansible/templates/compose-modules/dozzle.yml
+++ b/docker/ansible/templates/compose-modules/dozzle.yml
@@ -7,7 +7,7 @@ services:
       - dozzle-docker-proxy
     command: --remote-host tcp://dozzle-docker-proxy:2375|Docker
     networks:
-      - t2_proxy
+      - dozzle-frontend
       - dozzle-backend
     restart: always
     security_opt:
@@ -25,6 +25,7 @@ services:
       - homepage.description=Container Log Viewer
       # Traefik
       - "traefik.enable=true"
+      - "traefik.docker.network=dozzle-frontend"
       ## Middlewares
       - "traefik.http.routers.dozzle-rtr.middlewares=chain-auth@file"
       ## HTTP Services
@@ -53,6 +54,7 @@ services:
       - /run
 
 networks:
+  dozzle-frontend:
+    name: dozzle-frontend
   dozzle-backend:
     name: dozzle-backend
-    driver: bridge
