--- a/docker/ansible/templates/compose-modules/drawio.yml
+++ b/docker/ansible/templates/compose-modules/drawio.yml
@@ -13,7 +13,7 @@ services:
       - PGID=${PGID}
       - TZ=${TZ}
     networks:
-      - t2_proxy
+      - drawio-frontend
     labels:
       # Homepage
       - homepage.group=Productivity
@@ -23,6 +23,7 @@ services:
       - homepage.description=Flowchart & Diagram Maker
       # Traefik
       - "traefik.enable=true"
+      - "traefik.docker.network=drawio-frontend"
       ## HTTP Routers
       - "traefik.http.routers.drawio-rtr.rule=Host(`draw.$DOMAINNAME`)"
       ## Middlewares
@@ -37,3 +38,7 @@ services:
     #   timeout: 3s
     #   retries: 5
     #   start_period: 3s
+
+networks:
+  drawio-frontend:
+    name: drawio-frontend
