--- a/docker/ansible/templates/compose-modules/excalidraw.yml
+++ b/docker/ansible/templates/compose-modules/excalidraw.yml
@@ -13,7 +13,7 @@ services:
       - PGID=${PGID}
       - TZ=${TZ}
     networks:
-      - t2_proxy
+      - excalidraw-frontend
     labels:
       # Homepage
       - homepage.group=Productivity
@@ -23,8 +23,13 @@ services:
       - homepage.description=Virtual Whiteboard
       # Traefik
       - "traefik.enable=true"
+      - "traefik.docker.network=excalidraw-frontend"
       ## Middlewares
       - "traefik.http.routers.excalidraw-rtr.middlewares=chain-auth@file"
       ## HTTP Services
       - "traefik.http.routers.excalidraw-rtr.service=excalidraw-svc"
       - "traefik.http.services.excalidraw-svc.loadbalancer.server.port=80"
+
+networks:
+  excalidraw-frontend:
+    name: excalidraw-frontend
