--- a/docker/ansible/templates/compose-modules/gatus.yml
+++ b/docker/ansible/templates/compose-modules/gatus.yml
@@ -7,7 +7,7 @@ services:
       - gatus-db
     restart: always
     networks:
-      - t2_proxy
+      - gatus-frontend
       - gatus-backend
     security_opt:
       - no-new-privileges=true
@@ -42,6 +42,7 @@ services:
       - org.label-schema.group=productivity
       # Traefik
       - "traefik.enable=true"
+      - "traefik.docker.network=gatus-frontend"
       ## Middlewares
       - "traefik.http.routers.gatus-rtr.middlewares=chain-auth@file"
       - "traefik.http.routers.gatus-rtr.rule=Host(`status-docker.$DOMAINNAME`)"
@@ -121,6 +122,7 @@ volumes:
   gatus_db_data:
 
 networks:
+  gatus-frontend:
+    name: gatus-frontend
   gatus-backend:
     name: gatus-backend
-    driver: bridge
