--- a/docker/ansible/templates/compose-modules/it-tools.yml
+++ b/docker/ansible/templates/compose-modules/it-tools.yml
@@ -5,7 +5,7 @@ services:
     depends_on:
       - traefik
     networks:
-      - t2_proxy
+      - it-tools-frontend
     restart: always
     security_opt:
       - no-new-privileges=true
@@ -21,9 +21,14 @@ services:
       - homepage.description=Various IT Tools
       # Traefik
       - "traefik.enable=true"
+      - "traefik.docker.network=it-tools-frontend"
       ## Middlewares
       - "traefik.http.routers.it-tools-rtr.middlewares=chain-auth@file"
       ## HTTP Services
       - "traefik.http.routers.it-tools-rtr.rule=Host(`tools.$DOMAINNAME`)"
       - "traefik.http.routers.it-tools-rtr.service=it-tools-svc"
       - "traefik.http.services.it-tools-svc.loadbalancer.server.port=80"
+
+networks:
+  it-tools-frontend:
+    name: it-tools-frontend
