--- a/docker/ansible/templates/compose-modules/oauth2-proxy.yml
+++ b/docker/ansible/templates/compose-modules/oauth2-proxy.yml
@@ -14,9 +14,8 @@ services:
     depends_on:
       - traefik
     networks:
-      t2_proxy:
-        ipv4_address: 192.168.101.201
-      default:
+      oauth2-proxy-frontend:
+      # default:
       # oauth2-proxy-backend:
     restart: always
     security_opt:
@@ -70,6 +69,7 @@ services:
     labels:
       # Traefik
       - "traefik.enable=true"
+      - "traefik.docker.network=oauth2-proxy-frontend"
       ## HTTP Routers
       - "traefik.http.routers.oauth-rtr.rule=Host(`oauth2-proxy.$DOMAINNAME`)"
       ## HTTP Services
@@ -102,6 +102,7 @@ volumes:
   oauth2_proxy_redis_data:
 
 networks:
+  oauth2-proxy-frontend:
   oauth2-proxy-backend:
     name: oauth2-proxy-backend
     driver: bridge
