--- a/docker/ansible/templates/compose-modules/openspeedtest.yml
+++ b/docker/ansible/templates/compose-modules/openspeedtest.yml
@@ -5,7 +5,7 @@ services:
     depends_on:
       - traefik
     networks:
-      - t2_proxy
+      - openspeedtest-frontend
     restart: always
     security_opt:
       - no-new-privileges=true
@@ -21,9 +21,14 @@ services:
       - homepage.description=Network Speedtest
       # Traefik
       - "traefik.enable=true"
+      - "traefik.docker.network=openspeedtest-frontend"
       ## Middlewares
       - "traefik.http.routers.openspeedtest-rtr.middlewares=chain-auth@file"
       ## HTTP Services
       - "traefik.http.routers.openspeedtest-rtr.rule=Host(`speedtest.$DOMAINNAME`)"
       - "traefik.http.routers.openspeedtest-rtr.service=openspeedtest-svc"
       - "traefik.http.services.openspeedtest-svc.loadbalancer.server.port=3000"
+
+networks:
+  openspeedtest-frontend:
+    name: openspeedtest-frontend
