--- a/docker/ansible/templates/compose-modules/phpmyadmin.yml
+++ b/docker/ansible/templates/compose-modules/phpmyadmin.yml
@@ -5,7 +5,7 @@ services:
     depends_on:
       - traefik
     networks:
-      - t2_proxy
+      - phpmyadmin-frontend
     restart: always
     security_opt:
       - no-new-privileges=true
@@ -23,8 +23,13 @@ services:
       - homepage.description=Database Management
       # Traefik
       - "traefik.enable=true"
+      - "traefik.docker.network=phpmyadmin-frontend"
       ## Middlewares
       - "traefik.http.routers.phpmyadmin-rtr.middlewares=chain-auth@file"
       ## HTTP Services
       - "traefik.http.routers.phpmyadmin-rtr.service=phpmyadmin-svc"
       - "traefik.http.services.phpmyadmin-svc.loadbalancer.server.port=80"
+
+networks:
+  phpmyadmin-frontend:
+    name: phpmyadmin-frontend
