--- a/docker/ansible/templates/compose-modules/vault.yml
+++ b/docker/ansible/templates/compose-modules/vault.yml
@@ -6,7 +6,7 @@ services:
       - traefik
     command: server # Run in PRD
     networks:
-      - t2_proxy
+      - vault-frontend
     restart: always
     security_opt:
       - no-new-privileges=true
@@ -68,6 +68,7 @@ services:
       - org.label-schema.group=infrastructure
       # Traefik
       - "traefik.enable=true"
+      - "traefik.docker.network=vault-frontend"
       ## Middlewares
       - "traefik.http.routers.vault-rtr.middlewares=chain-auth@file"
       - "traefik.http.routers.vault-ca-rtr.middlewares=chain-no-auth@file"
@@ -96,3 +97,6 @@ services:
 
 volumes:
   vault_data:
+
+networks:
+  vault-frontend:
