Move archived compose files to archive folder

--- a/.archive/docker/ansible/templates/compose-modules/cloudflare-companion.yml
+++ b/.archive/docker/ansible/templates/compose-modules/cloudflare-companion.yml
@@ -1,3 +1,9 @@
+#
+#### DEPRECATION NOTICE
+## This compose module is no longer in use
+## Replaced by: favonia/cloudflare-ddns
+#
+
 services:
   cloudflare-companion:
     container_name: cloudflare-companion
