--- a/docker/ansible/inventory/group_vars/docker/secrets.sops.yml
+++ b/docker/ansible/inventory/group_vars/docker/secrets.sops.yml
@@ -1,5 +1,11 @@
 #ENC[AES256_GCM,data:qf+mX2QpMFI=,iv:tQ5PuZktn4qUt28ZERAyqLKZ6nz7PWB6Hc30OUW4dMc=,tag:xFWCnJ9gbx4jn0mWr53uoQ==,type:comment]
 generic__database_encryption_passphrase: ENC[AES256_GCM,data:D+qrOJB/hrW5ZFZMVRRqdNFxK/3o7gH2y4bRyeJrxhbgYT8N6e4Jkpa9W2T7aY282GazDujzEINsFcWloBfsmA==,iv:c2tbcUOGPSPSebGMiQGGvaY4gCeCE253R0T1mH/nPGo=,tag:g5pw2rgo/Ahf1E1BCLrd/A==,type:str]
+#ENC[AES256_GCM,data:FgzlA4YXJONK3HdMM2UEnkIsOowzwb5GE0dpfZIVUyw6SNT+dqsFzNda,iv:pj1Qgz7Ez5p3zNFmkIhii78j32CDsPJZkZcoZy94an4=,tag:7EZJ7pjd77zeBSZivVyKnQ==,type:comment]
+generic__database_backup_storage_account_name: null
+#ENC[AES256_GCM,data:qBZFZCLaYI0TXzDjo/PMPeV+CDxqWH/c9RIISzM+R5xQGZAMgHEUNgqz,iv:eONl6adyeRVTebrtkxGA2Pe6FpZnEXQhjgjO4PUCBbU=,tag:PNCE0uJ9JLvuD3qahUcwIg==,type:comment]
+generic__database_backup_storage_account_key: null
+generic__database_backup_storage_account_path: ENC[AES256_GCM,data:X+9RSvQYb70iNQZ++qwujtA=,iv:fOgASRH7082DDnsX8pIVarhN/JT2dtteWnawFlM0edw=,tag:hOiO/2fiaZ93tCb8fEHYBw==,type:str]
+generic__database_backup_storage_account_mode: ENC[AES256_GCM,data:AVDA8w==,iv:Ip+3pu5P8EfoScpn9gT6KRmlJRDE+wXEOTF6+PtXmPU=,tag:XshJRPZbyo9r4EnOuIeqWQ==,type:str]
 generic__ips_traefik: ENC[AES256_GCM,data:IRsIbfTS8IdwTZpfHdfk,iv:L+z1q+PHjSYr7X4t2NQOcaiS9qgaPhd8rWi19G+TVGA=,tag:ioIXRVidrKcyWKyqUtPQMA==,type:str]
 #ENC[AES256_GCM,data:kMi7iD+W9auJZVVdM0k=,iv:5GJjPNZ+8lwY4QV7sCC9NZMhSKf+qXjh2L5OCDxTqjk=,tag:k0A2Xd4Dy4WAVqkVhR9hOg==,type:comment]
 notifications__mailrise_smtp_password: ENC[AES256_GCM,data:LZVtUXRFD40C9vrz/V9OGOMhC1DXb0BTx3alMAhja99z0Za/e5QiP8/HPd9iqqFfPijfbY/0WNXKqNtJz1mBYQ==,iv:lRYtRXO/BDbl0BaafnJxCeoeNR1hT93a6udBNRszzsA=,tag:nqI1LbAH+e/zbEJ71qpcTg==,type:str]
@@ -134,8 +140,8 @@ sops:
             eVBKRXVRTE0xSGdTQzF6enJtNnMzOGcKfIhR/2B8E7FhoP5b+fRdpPwIwE7gOrIa
             mR6EnBhQi6Cr/LM/7nwWvCt/E/2IoDLMPPl7f1xyDPIjV/fY5XncqQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-11-27T21:05:43Z"
-    mac: ENC[AES256_GCM,data:4JKkCxAHDJJ5h4ptFJhAFUEZju/ra3XMn5gsecrNdJM9xKrjv0cj4z9hGppDRKIZhTqly9r09M5dKzjbovib/nfec8zvsqSDEt4twToGbqu7O6xAzH6mHVdx8I6GG1gbnPyLn9N7/+1D7J1tIqqQ24dt+Id8ihV0b97LT7f7NIQ=,iv:MfZudU4YhSqLWQ0uagt99Knyy36vO5e1mswYTohITN8=,tag:eWQDNCpIdpNVd26LC1tsqQ==,type:str]
+    lastmodified: "2025-01-02T14:50:35Z"
+    mac: ENC[AES256_GCM,data:AD/FUUih+jOUjxxu4VSAn8Z/8Al8kmGzZNKVQLRAt7/q2dVRgWN9ipoGKTPNWf/6zKbC43EwfSjFvWVb5k5EO+Si4A1MN6KxVSzK7mfJWeCqTf1WJjJb+LB/QnV324DjUQ0hWXpV2+zLY6W4NyNXfddi+O6DthS7WuxWmsaVfBk=,iv:6u7wfAzDqjJ5L8Gfggf5kuy5102OjrEjz8Ai+LwT+KY=,tag:capXBWAdrsI/DfRo1NYTIQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
-    version: 3.9.1
+    version: 3.9.2
