--- a/docker/ansible/inventory/group_vars/external/secrets.sops.yml
+++ b/docker/ansible/inventory/group_vars/external/secrets.sops.yml
@@ -1,5 +1,7 @@
 #ENC[AES256_GCM,data:rU84YfGpnQQ=,iv:JVSotPsI9UBOMgQHZqSfFrLBOd1JRz6QlQQRsGnOfUU=,tag:qCOWSFu8GyYgwrwGNmldVw==,type:comment]
 generic__database_encryption_passphrase: ENC[AES256_GCM,data:KgkKdIw1lDNVJazkfoWBsFQLoAXLYK0KVjp6E0DD+l8dAr15xJbduoOrqAsVpSW7ocJq53CxYqoLEBqZQOb+kA==,iv:R6MLANS9UmOLk4II4k172WFqOOvR0DQ6ov1+RPdj4lw=,tag:3W3MXA5N7k/UpWJR+q9/8A==,type:str]
+generic__database_backup_storage_account_name: ENC[AES256_GCM,data:E2HAYHsGUhYeu94KOA4Yas9y9g==,iv:uVut8CWrtyXOiBkZXg+x1OLFoA4pAyDVCDqs3NvpqZA=,tag:eAmBQig8Unmhw7W+psOeUg==,type:str]
+generic__database_backup_storage_account_key: ENC[AES256_GCM,data:O3D9gCS8vTr7qCu//6CMaQtHkH1sK9ym6wqF44icGjLxYW/+D1Z84VpDSd5pBeryd4t72z/Hx604k5QZAvYb41pUkg0Kh6tiYOKdqs5+GKky3YgINZkjvQ==,iv:9W1pOS0MyCiphaixRrz4PkOaS8w++VBcL+bHURvoNGw=,tag:buaBTZWnMJ8MgHedOKhjsQ==,type:str]
 #ENC[AES256_GCM,data:xH1mZmGOtekL0pddt4k=,iv:OkxMaN8fg18FcJ5x4yslfVwfkmE37G8xKf19I6NJdoc=,tag:4/GqGSybsUE1xViIi+gOdA==,type:comment]
 notifications__mailrise_smtp_password: ENC[AES256_GCM,data:WUSMm9Tyq2WHOnUkHWIW7y6gKX5KYuxe16v9KReLHRd63+RHDrSpsnSSq/kP3PR6l+X/zdG8GPW9JCnG5aFD8w==,iv:7Vmtkm+u9AA4Bv7+ddPLtRFyqpJSuZ120jrjjjurz5o=,tag:0k87LvtqQHXx9ZMgY0eUTQ==,type:str]
 #ENC[AES256_GCM,data:bvF/JgA=,iv:6ohFEwjJlQz9gG8+WubBFTVdvlGrdfUkOrAIBsITIqQ=,tag:Z8ZseSFvJfr6NDNrdbbw9w==,type:comment]
@@ -26,8 +28,8 @@ sops:
             eVBKRXVRTE0xSGdTQzF6enJtNnMzOGcKfIhR/2B8E7FhoP5b+fRdpPwIwE7gOrIa
             mR6EnBhQi6Cr/LM/7nwWvCt/E/2IoDLMPPl7f1xyDPIjV/fY5XncqQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-05-19T19:21:08Z"
-    mac: ENC[AES256_GCM,data:wpOk7Uj8104N1bKy1lGc9XylX8KCIvBo7OmmsOD8aksaT3G/dkRrz3CS5swdaNimHCCQVkZ1KqEVNreEdrYeKpfa5soUdCEANEZb1HUwvVBwxLtp0Bcyo8vMl+2N9Gqyrrym3PsXEDHiqb41vXZ9AWLbtWIYOUsc9CT+534Cclc=,iv:RJ3Bp6GqlYeQnDHL+llqquEDw4qrDgoCcjYN2ZIX0J8=,tag:nWRocfdLpMmKNrkgM6DmhQ==,type:str]
+    lastmodified: "2025-01-02T14:23:41Z"
+    mac: ENC[AES256_GCM,data:W+2DRysxMWU69/283KM97k6S+LhTUzh0dIyx9ooKtekMpgurfwajZJWVtZi0WAgmPrkQhsaM4C3lndm/eqqFfGFx0+Syw3tqlVXek64m7lFdYbUy4bTRM8GBpxGpTqqP73GEC4BTK9kMDAjrLidizMMCLxyebLg36mXSYBIFKgs=,iv:BYxuvk9Nm8GvoEemEOfST97ExLhdV4UQ0v2iqEt+PPw=,tag:rp/9CX8QGMHFCwyLNzNFdA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
-    version: 3.8.1
+    version: 3.9.2
