--- a/docker/ansible/templates/compose-modules/n8n.yml
+++ b/docker/ansible/templates/compose-modules/n8n.yml
@@ -73,9 +73,7 @@ services:
     image: tiredofit/db-backup:4.1.12@sha256:d3ee1a8fe16200587bed037c81fb651db031d68f3809c38d8d62976aa0745e39
     depends_on:
       - n8n-db
-    volumes:
-      - $DOCKERDIR/data/backup:/backup
-    mem_limit: 1024m
+    mem_limit: 512m
     networks:
       - n8n-backend
     environment:
@@ -85,13 +83,6 @@ services:
       - CONTAINER_NAME=n8n-db-backup
       - CONTAINER_ENABLE_MONITORING=FALSE # Disables Zabbix backup statistics
 
-      - ENABLE_NOTIFICATIONS=TRUE
-      - NOTIFICATION_TYPE=EMAIL
-      - SMTP_HOST=mailrise
-      - SMTP_PORT=${NOTIFICATIONS_MAILRISE_SMTP_PORT}
-      - MAIL_TO=msteams@mailrise.xyz
-      - MAIL_FROM=n8n-db-backup
-
       - DEFAULT_CHECKSUM=SHA1        # Set standard checksum to SHA1
       - DEFAULT_COMPRESSION=ZSTD     # Compress all with ZSTD
       - DEFAULT_BACKUP_INTERVAL=1440 # Backup every 1440 minutes = 24 hours
@@ -100,6 +91,12 @@ services:
 
       - DEFAULT_ENCRYPT=TRUE                            # Encrypt backup files with GPG
       - DEFAULT_ENCRYPT_PASSPHRASE=${DB_ENC_PASSPHRASE} # Set encryption password
+
+      - DEFAULT_BACKUP_LOCATION=blobxfer
+      - DEFAULT_BLOBXFER_STORAGE_ACCOUNT=${DB_BACKUP_SA_NAME}
+      - DEFAULT_BLOBXFER_STORAGE_ACCOUNT_KEY=${DB_BACKUP_SA_KEY}
+      - DEFAULT_BLOBXFER_REMOTE_PATH=${DB_BACKUP_SA_PATH}
+      - DEFAULT_BLOBXFER_MODE=${DB_BACKUP_SA_MODE}
 
       - DB01_TYPE=pgsql
       - DB01_HOST=n8n-db
