--- a/docker/ansible/requirements.yml
+++ b/docker/ansible/requirements.yml
@@ -6,3 +6,9 @@ roles:
   - name: robertdebock.storage
     src: https://github.com/robertdebock/ansible-role-storage
     version: 6.0.4
+  - name: geerlingguy.docker
+    src: https://github.com/geerlingguy/ansible-role-docker
+    version: 7.4.7
+  - name: geerlingguy.security
+    src: https://github.com/geerlingguy/ansible-role-security
+    version: 3.0.0
